Tue Jul 28 15:48:15 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_event_all, rb_add_event_hook): merged thread-switch
	  events for RubyCocoa.  [ruby-dev:38924]

Tue Jul 28 04:34:05 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/extconf.rb: bug fix and ignore invalid Tcl/Tk libraries.

	* ext/tk/lib/config_list.in: bug fix and add a new option.

	* ext/tk/lib/README.tcltklib: update for a new option.

Sun Jul 26 19:17:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_eof): go to the next file if called after ARGF.close
	  or ARGF.skip.  a patch from Mike Kasick at [ruby-core:24561].

Sun Jul 26 18:42:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (Init_IO): $FILENAME should correspond to the first elemen
	  of ARGV initially.

Fri Jul 24 20:33:49 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/time.rb, test/test_time.rb: Move test code to a separate
	  file to save memory and compile time. [Bug #1812]

Thu Jul 23 17:26:51 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: should not create "config_list" in a $srcdir.

Thu Jul 23 15:04:20 2009  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* lib/irb.rb, lib/irb/init.rb, lib/irb/ext/save-history.rb: add
	  IRB::irb_at_exit. no use finalizer saving history. [ruby-dev-38563]

Tue Jul 21 20:26:35 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (config.status): remove the definition of CP, so
	  Makefiles of exts will use ``-run -e cp'' instead of copy command.

Tue Jul 21 19:34:56 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_io_flush): fsync() after buffer is flushed on win32.
	  backported from trunk.  [ruby-core:20043]

Sun Jul 19 14:03:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (DEPRECATED): backported from trunk.

	* eval.c (rb_mod_autoload): should use SafeStringValue() instead
	  obsolete Check_SafeStr().

	* ruby.h (rb_check_safe_str, rb_str2cstr): deprecation warning.
